<resources>
  <string name="app_name">Ghid Turistic</string>
  <string name="title_activity_maps">Map</string>
  <string name="login">Login</string>
  <string name="sign_up">Sign up</string>
  <string name="user_name">User name</string>
  <string name="password">Password</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="location_serv_disabled_error">Location services seem to be disabled. Please enable in order for the app to work properly</string>
    <string name="search">Search</string>
    <string name="latitude">Latitude</string>
  <string name="longitude">Longitude</string>
</resources>
