<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

  <TextView
      android:id="@+id/login_page_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:layout_marginTop="@dimen/login_margin_top"
      style="@style/login_page_button_style"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/sign_up_page_button"/>

  <TextView
      android:id="@+id/sign_up_page_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/sign_up"
      style="@style/login_page_button_style"
      android:layout_marginTop="@dimen/login_margin_top"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/login_page_button"/>

  <!-- actual login / sign up fields -->

  <EditText
      android:id="@+id/username_edittext"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="80dp"
      android:hint="@string/user_name"
      android:layout_marginStart="60dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/login_page_button"/>

  <EditText
      android:id="@+id/password_edittext"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:layout_marginStart="60dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/username_edittext"/>

  <EditText
      android:id="@+id/confirm_password_edittext"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:hint="@string/confirm_password"
      android:layout_marginStart="60dp"
      android:inputType="textPassword"
      android:visibility="gone"
      tools:visibility="visible"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/password_edittext"/>

  <!-- login / sign up button -->
  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/auth_button"
      android:layout_marginBottom="80dp"
      android:paddingStart="50dp"
      android:paddingEnd="50dp"
      android:textColor="@color/light_blue"
      android:background="@drawable/button_background"
      android:elevation="2dp"
      tools:text="Sign up"
      android:textAllCaps="false"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
